####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = viswalld
viswalld_SOURCES = cmsgqueue.cpp main.cpp 
viswalld_LDADD   = 


EXTRA_DIST = main.cpp cmsgqueue.cpp cmsgqueue.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
viswalld_LDFLAGS = $(all_libraries) 
                                                                                
